@@ -77,10 +77,6 @@ public:
     static void GetDstClipAndMatrixCounts(const SkCanvas::ImageSetEntry set[], int count,
                                           int* totalDstClipCount, int* totalMatrixCount);
 
-    // Checks that the marker name is an identifier ([a-zA-Z][a-zA-Z0-9_]*)
-    // Identifiers with leading underscores are reserved (not allowed).
-    static bool ValidateMarker(const char*);
-
     static SkCanvas::SaveLayerRec ScaledBackdropLayer(const SkRect* bounds,
                                                       const SkPaint* paint,
                                                       const SkImageFilter* backdrop,
