@@ -94,7 +94,6 @@ template <> void Draw::draw(const DrawBehind& r) {
     SkCanvasPriv::DrawBehind(fCanvas, r.paint);
 }
 
-DRAW(MarkCTM, markCTM(r.name.c_str()));
 DRAW(SetMatrix, setMatrix(fInitialCTM.asM33() * r.matrix));
 DRAW(SetM44, setMatrix(fInitialCTM * r.matrix));
 DRAW(Concat44, concat(r.matrix));
@@ -275,7 +274,6 @@ private:
         fMeta  [fCurrentOp].isDraw = isSaveLayer;
     }
 
-    void trackBounds(const MarkCTM&)           { this->pushControl(); }
     void trackBounds(const SetMatrix&)         { this->pushControl(); }
     void trackBounds(const SetM44&)            { this->pushControl(); }
     void trackBounds(const Concat&)            { this->pushControl(); }
