@@ -337,10 +337,6 @@ void SkRecorder::didRestore() {
     this->append<SkRecords::Restore>(this->getTotalMatrix());
 }
 
-void SkRecorder::onMarkCTM(const char* name) {
-    this->append<SkRecords::MarkCTM>(SkString(name));
-}
-
 void SkRecorder::didConcat44(const SkM44& m) {
     this->append<SkRecords::Concat44>(m);
 }
